azure/4.jenkins-istio/jenkins-istio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  template:
    metadata:
      name: jenkins
      labels:
        app: jenkins
    spec:
      containers:
        - name: jenkins
          image: jenkins
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  selector:
    matchLabels:
      app: jenkins


---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  selector:
    app: jenkins
  ports:
    - port: 8080
      protocol: TCP
---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: jenkins-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "jenkins.hkn.cool"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jenkins
spec:
  hosts:
    - jenkins.hkn.cool
    - jenkins
  gateways:
    - jenkins-gateway
  http:
    - route:
        - destination:
            host: jenkins
            port:
              number: 8080
            subset: v1

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: jenkins
spec:
  host: jenkins
  subsets:
    - name: v1
      labels:
        version: v1
---
